@@ -1,19 +1,16 @@
 package com.hbm.inventory;
 
+import com.hbm.HBMsNTM;
+import com.hbm.config.MainConfig;
 import com.hbm.items.ModItems;
-import net.minecraft.client.resources.model.Material;
 import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.core.registries.Registries;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.tags.TagKey;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.state.BlockState;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class RecipesCommon {
 
@@ -49,64 +46,52 @@ public class RecipesCommon {
 
         protected int stackSize;
 
-        public boolean isApplicable(ItemStack stack) {
-            return isApplicable(new ComparableStack(stack));
-        }
-
-        public boolean isApplicable(ComparableStack comp) {
-            if (this instanceof ComparableStack cs) {
-                return cs.equals(comp);
-            }
-
-            if (this instanceof OreDictStack odStack) {
-                return comp.toStack().is(odStack.getTag());
-            }
-
-            return false;
-        }
-
+        /**
+         * Whether the supplied itemstack is applicable for a recipe (e.g. anvils). Slightly different from {@code isApplicable}.
+         * @param stack the ItemStack to check
+         * @param ignoreSize whether size should be ignored entirely or if the ItemStack needs to be >at least< the same size as this' size
+         */
         public abstract boolean matchesRecipe(ItemStack stack, boolean ignoreSize);
 
         public abstract AStack copy();
+        public abstract AStack copy(int stackSize);
 
-        public abstract List<ItemStack> extractForDisplay();
+        /**
+         * Generates either an ItemStack or an ArrayList of ItemStacks
+         */
+        public abstract List<ItemStack> extractForJEI();
 
         public ItemStack extractForCyclingDisplay(int cycle) {
-            List<ItemStack> list = extractForDisplay();
+            List<ItemStack> list = extractForJEI();
             cycle *= 50;
 
-            if (list.isEmpty()) {
-                return new ItemStack(ModItems.NOTHING.get());
-            }
-
-            int index = (int) ((System.currentTimeMillis() % ((long) cycle * list.size())) / cycle);
-            return list.get(index);
+            if (list.isEmpty()) return new ItemStack(ModItems.NOTHING.get());
+            return list.get((int)(System.currentTimeMillis() % (cycle * list.size()) / cycle));
         }
 
-        public int getStackSize() {
-            return stackSize;
-        }
-
-        public void setStackSize(int size) {
-            this.stackSize = size;
-        }
     }
 
     public static class ComparableStack extends AStack {
 
         public Item item;
-        public int meta;
+        //public int meta; meta? i dont know you
 
         public ComparableStack(ItemStack stack) {
-            if (stack == null || stack.isEmpty()) {
+            if (stack.isEmpty()) {
                 this.item = ModItems.NOTHING.get();
                 this.stackSize = 1;
-                this.meta = 0;
                 return;
             }
-            this.item = stack.getItem();
-            this.stackSize = stack.getCount();
-            this.meta = stack.getDamageValue();
+            try {
+                this.item = stack.getItem();
+                if (this.item == null) ModItems.NOTHING.get(); //i'm going to bash some fuckard's head in
+                this.stackSize = stack.getCount();
+            } catch (Exception ex) {
+                this.item = ModItems.NOTHING.get();
+                if (!MainConfig.COMMON.ENABLE_SILENT_COMPSTACK_ERRORS.get()) {
+                    ex.printStackTrace();
+                }
+            }
         }
 
         public ComparableStack makeSingular() {
@@ -115,19 +100,24 @@ public class RecipesCommon {
         }
 
         public ComparableStack(Item item) {
-            this.item = item == null ? ModItems.NOTHING.get() : item;
+            this.item = item;
+            if (this.item == null) this.item = ModItems.NOTHING.get();
             this.stackSize = 1;
-            this.meta = 0;
         }
 
-        public ComparableStack(Block block) {
-            this(block.asItem());
+        public ComparableStack(Block item) {
+            this.item = item.asItem();
+            this.stackSize = 1;
         }
 
-        public ComparableStack(Item item, int stacksize, int meta) {
-            this.item = item == null ? ModItems.NOTHING.get() : item;
-            this.stackSize = stacksize;
-            this.meta = meta;
+        public ComparableStack(Block item, int stackSize) {
+            this.item = item.asItem();
+            this.stackSize = stackSize;
+        }
+
+        public ComparableStack(Item item, int stackSize) {
+            this(item);
+            this.stackSize = stackSize;
         }
 
         public ItemStack toStack() {
@@ -136,91 +126,75 @@ public class RecipesCommon {
 
         @Override
         public int hashCode() {
-            return Objects.hash(BuiltInRegistries.ITEM.getKey(item), meta, stackSize);
+
+            if (item == null) {
+                if (!MainConfig.COMMON.ENABLE_SILENT_COMPSTACK_ERRORS.get()) {
+                    HBMsNTM.LOGGER.error("ComparableStack has a null item! This is a serious issue!");
+                    Thread.dumpStack();
+                }
+                item = ModItems.NOTHING.get();
+            }
+
+            final int prime = 31;
+            int result = 1;
+            result = prime * result +  BuiltInRegistries.ITEM.getKey(item).hashCode(); //using the int ID will cause fucky-wuckys if IDs are scrambled
+            result = prime * result + stackSize;
+            return result;
         }
 
         @Override
         public boolean equals(Object obj) {
             if (this == obj) return true;
-            if (!(obj instanceof ComparableStack other)) return false;
-            if (!Objects.equals(item, other.item)) return false;
-            if (meta != other.meta) return false;
+            if (obj == null) return false;
+            if (getClass() != obj.getClass()) return false;
+            ComparableStack other = (ComparableStack) obj;
+            if(item == null) {
+                if(other.item != null) return false;
+            } else if(!item.equals(other.item))
+                return false;
             return stackSize == other.stackSize;
         }
 
         @Override
         public int compareTo(AStack stack) {
+
             if (stack instanceof ComparableStack comp) {
-                int cmp = BuiltInRegistries.ITEM.getKey(item).compareTo(BuiltInRegistries.ITEM.getKey(comp.item));
-                if (cmp != 0) return cmp;
-                return Integer.compare(meta, comp.meta);
+                int thisID = Item.getId(item);
+                int thatID = Item.getId(comp.item);
+
+                return Integer.compare(thisID, thatID);
             }
+
             return 0;
         }
 
         @Override
-        public AStack copy() {
-            return new ComparableStack(item, stackSize, meta);
+        public ComparableStack copy() {
+            return new ComparableStack(item, stackSize);
         }
 
         @Override
-        public List<ItemStack> extractForDisplay() {
-            return List.of();
+        public ComparableStack copy(int stackSize) {
+            return new ComparableStack(item, stackSize);
         }
 
-        public ComparableStack copy(int stacksize) {
-            return new ComparableStack(item, stacksize, meta);
-        }
 
         @Override
         public boolean matchesRecipe(ItemStack stack, boolean ignoreSize) {
-            if (stack.isEmpty()) return false;
+
+            if (stack == null) return false;
             if (stack.getItem() != this.item) return false;
-            if (this.meta != -1 && stack.getDamageValue() != this.meta) return false;
-            return ignoreSize || stack.getCount() >= this.stackSize;
-        }
-    }
-    public static class OreDictStack extends AStack {
-        private final TagKey<Item> tag;
-
-        public OreDictStack(ResourceLocation tagName, int stackSize) {
-            this.tag = TagKey.create(Registries.ITEM, tagName);
-            this.stackSize = stackSize;
-        }
-
-        public OreDictStack(ResourceLocation tagName) {
-            this(tagName, 1);
-        }
-
-        public TagKey<Item> getTag() {
-            return tag;
-        }
-
-        @Override
-        public boolean matchesRecipe(ItemStack stack, boolean ignoreSize) {
-            if (stack.isEmpty()) return false;
-            if (!stack.is(tag)) return false;
-
             if (!ignoreSize && stack.getCount() < this.stackSize) return false;
 
             return true;
         }
 
         @Override
-        public AStack copy() {
-            return new OreDictStack(tag.location(), stackSize);
-        }
-
-        @Override
-        public List<ItemStack> extractForDisplay() {
-            return List.of();
-        }
-
-        @Override
-        public int compareTo(RecipesCommon.AStack o) {
-            return 0;
+        public List<ItemStack> extractForJEI() {
+            return Collections.singletonList(this.toStack());
         }
     }
+
     public static class StateBlock {
         public final BlockState state;
 
@@ -234,14 +208,23 @@ public class RecipesCommon {
 
         @Override
         public int hashCode() {
-            return state.hashCode();
+            final int prime = 31;
+            int result = 1;
+            result = prime * result + BuiltInRegistries.BLOCK.getKey(state.getBlock()).hashCode();
+            return result;
         }
+
 
         @Override
         public boolean equals(Object obj) {
             if (this == obj) return true;
-            if (!(obj instanceof StateBlock other)) return false;
-            return state.equals(other.state);
+            if (obj == null) return false;
+            if (getClass() != obj.getClass()) return false;
+            StateBlock other = (StateBlock) obj;
+            if (state == null) {
+                if (other.state != null) return false;
+            } else if (!state.equals(other.state)) return false;
+            return true;
         }
     }
 }
